fix: missing margin-top on body
navigation covers part of the body as the padding on the top was not set

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -29,19 +29,19 @@
 @import "lib/prism-gh-theme.css";
 
 
-body {
+#body-webcompat {
   background-color: var(--color-bg-page);
-  padding-top: var(--navi-height);
+  margin-top: var(--navi-height);
 }
 
 @media screen and (min-width: 665px) {
-  body {
+  #body-webcompat {
     padding: var(--navi-height) 19px 50px;
   }
 }
 
 @media screen and (min-width: 998px) {
-  body {
+  #body-webcompat {
     padding: 0;
   }
 }
